--- a/index.html
+++ b/index.html
@@ -1414,6 +1414,36 @@
 <script src="js/plugins.js"></script>
 <script src="js/custom.js"></script>
 
+<a href="https://wa.me/1234567890" class="whatsapp-float" target="_blank">
+    <img src="https://i.imgur.com/Gq7GVKT.png" alt="WhatsApp" class="whatsapp-icon">
+</a>
 
+<style>
+    .whatsapp-float {
+        position: fixed;
+        bottom: 20px;
+        right: 20px;
+        z-index: 1000;
+    }
+
+    .whatsapp-icon {
+        width: 60px;
+        height: 60px;
+        border-radius: 50%;
+        box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+        transition: transform 0.3s ease-in-out;
+    }
+
+    .whatsapp-icon:hover {
+        transform: scale(1.1);
+    }
+
+    @media (max-width: 768px) {
+        .whatsapp-icon {
+            width: 50px;
+            height: 50px;
+        }
+    }
+</style>
 </body>
 </html>
