--- a/index.html
+++ b/index.html
@@ -1414,7 +1414,7 @@
 <script src="js/plugins.js"></script>
 <script src="js/custom.js"></script>
 
-<a href="https://wa.me/1234567890" class="whatsapp-float" target="_blank">
+<a href="https://wa.me/5491154932199?text=Hola,%20quiero%20consultar%20por%20una%20pileta" class="whatsapp-float" target="_blank">
     <img src="https://i.imgur.com/Gq7GVKT.png" alt="WhatsApp" class="whatsapp-icon">
 </a>
 
