--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="container">
 
                     <!--begin logo -->
-                    <a class="navbar-brand" href="#">RFB Natatorios</a>
+                    <a class="navbar-brand logotipo"> <img src="images/logo.png" alt="Logo RFB"></a>
                     <!--end logo -->
 
                     <!--begin navbar-toggler -->
@@ -101,11 +101,12 @@
 	        <div class="row">
 	          
                 <!--begin col-md-6-->
-                <div class="col-md-6 padding-top-120">
+                <div class="col-md-6 padding-top-40">
 
                     <h1>CONSTRUIMOS LA PILETA DE TUS SUEÑOS</h1>
 
-                    <p class="hero-text">Con la experiencia y el respaldo de un equipo de arquitectos especializados. Contáctanos -20 años de garantia real-</p>
+                    <p class="hero-text">Experiencia y Respaldo de un equipo de arquitectos especializados -20 años de garantia 
+                    </p>
 
                     <!--begin popup-video-wrapper-->
                     <div class="popup-gallery-wrapper">
@@ -129,7 +130,7 @@
                 <!--end col-md-6-->
 
                 <!--begin col-md-5-->
-                <div class="col-md-5 offset-md-1 margin-top-20">
+                <div class="col-md-5 offset-md-1 margin-top-15">
 
                     <!--begin register-form-wrapper-->
                     <div class="register-form-wrapper wow bounceIn" data-wow-delay="0.5s" style="visibility: visible; animation-delay: 0.5s; animation-name: bounceIn;">
