--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -229,7 +229,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -246,7 +246,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/623x1050">
+                            <a class="popup2" href="images/8.jpg">
                                 <img src="images/8.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -263,7 +263,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -274,7 +274,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -549,7 +549,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -560,7 +560,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -577,7 +577,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/623x1050">
+                            <a class="popup2" href="images/8.jpg">
                                 <img src="images/8.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -594,7 +594,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -605,7 +605,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -698,7 +698,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -709,7 +709,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -726,7 +726,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/623x1050">
+                            <a class="popup2" href="images/8.jpg">
                                 <img src="images/8.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -743,7 +743,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -754,7 +754,7 @@
                     <figure class="gallery-insta">
                         <!--begin popup-gallery-->
                         <div class="popup-gallery popup-gallery-rounded portfolio-pic">
-                            <a class="popup2" href="http://placehold.it/555x460">
+                            <a class="popup2" href="images/gallery2.jpg">
                                 <img src="images/gallery2.jpg" class="width-100" alt="pic">
                                 <span class="eye-wrapper"><i class="fa fa-search-plus eye-icon" style="font-size: 38px;"></i></span>
                             </a>
@@ -810,10 +810,7 @@
 
                         <!--begin form-->
                         <div>
-                             
-                            <!--begin success message -->
-                            <p class="contact_success_box" style="display:none;">We received your message and you'll hear from us soon. Thank You!</p>
-                            <!--end success message -->
+
                             
                             <!--begin contact form -->
                             <form id="contact-form" class="row contact-form contact" action="https://formspree.io/f/xzzkllye" method="post">
