--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 </head>
 
 <body>
-<a href="https:/wa.me/5491154932199?text=Hola,%20quiero%20consultar%20por%20una%20pileta"  target="_blank" class="whatsapp_float"><i class="fa-brands fa-whatsapp whatsapp-icon"></i></a>
+<a href="https://wa.me/5491154932199?text=Hola,%20quiero%20consultar%20por%20una%20pileta"  target="_blank" class="whatsapp_float"><i class="fa-brands fa-whatsapp whatsapp-icon"></i>
+</a>
     <!--begin header -->
     <header class="header">
 
